--- a/index.html
+++ b/index.html
@@ -23,23 +23,26 @@
   <h1>Take a guess!</h1>
       <!-- Textfield with Floating Label -->
 
-  <form action="js-game">
+  <form action="#">
     <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-      <input class="mdl-textfield__input" type="text" id="sample3">
-      <label class="mdl-textfield__label" for="sample3">Enter a number between 1-100...</label>
+      <input class="mdl-textfield__input" type="text" id="guess">
+      <label class="mdl-textfield__label" for="guess">Enter a number between 1-100...</label>
     </div>
 
   </form>
   <!-- Raised button with ripple -->
-  <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect">
+  <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect submit-js">
     SUBMIT GUESS
   </button>
+  <div class="guesses_left">
+    <p>You have 10 guesses left </p>
+  </div>
   
   <div class="buttons-row">
-    <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect">
+    <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect guess-js">
     GUESS AGAIN!
     </button>
-    <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect">
+    <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect hint-js">
     GET A HINT!
     </button>
   </div>
