--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <form action="#">
     <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
       <input class="mdl-textfield__input" type="text" id="guess">
-      <label class="mdl-textfield__label" for="guess">Enter a number between 1-100...</label>
+      <label class="mdl-textfield__label" for="guess">Guess a number between 1-100...</label>
     </div>
 
   </form>
@@ -39,11 +39,11 @@
   </div>
   
   <div class="buttons-row">
-    <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect guess-js">
-    GUESS AGAIN!
-    </button>
     <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect hint-js">
     GET A HINT!
+    </button>
+    <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect play-js">
+    PLAY AGAIN!
     </button>
   </div>
     </div>
