--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </div>
   </main>
 
-    <script src='http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js'></script>
+    <script src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js'></script>
     <script src="https://storage.googleapis.com/code.getmdl.io/1.0.6/material.min.js"></script>
     <script src='game.js'></script>
 </body>
